--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Terra Média</title>
+  <title>Register</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -13,9 +13,14 @@
 
   </header>
     <main>
+
+      <div class="img1"> 
+        <img src="https://upload.wikimedia.org/wikipedia/pt/0/0c/The_Lord_of_the_Rings_logo.png" alt="">
+      </div>
 <div class="card">
     <div class="painel">
-      <h1>Welcome to Middle Earth</h1>
+    
+      <h1>     Welcome to Middle Earth</h1>
       <p class="text1">Create your account and get ready for the journey. Protect your keys—not all that glitters is gold.</p>
 
     </div>
