--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login </title>
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style2.css">
 </head>
 
@@ -37,6 +39,9 @@
                 <div class="action-btn">
                     <button class="btn1">LOG-IN</button>
                 </div>
+                <p class="switch">Don’t have an account? 
+        <a href="index.html" id="toRegister">Create one</a>
+      </p>
     </main>
 </body>
 
